plugin release 2021.3