@@ -1,10 +1,10 @@
 plugins {
-    id 'org.jetbrains.intellij' version '1.14.0'
+    id 'org.jetbrains.intellij' version '0.7.3'
     id 'java'
 }
 
-group 'org.saidake'
-version '1.0-SNAPSHOT'
+group 'com.saidake.plugin'
+version '2021.3'
 
 repositories {
     mavenCentral()
@@ -13,11 +13,21 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    implementation 'ch.qos.logback:logback-classic:1.4.7'
+    implementation 'ch.qos.logback:logback-core:1.4.7'
+    implementation 'ch.qos.logback:logback-access:1.4.7'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
+    implementation 'org.dom4j:dom4j:2.1.4'
+    implementation 'jaxen:jaxen:2.0.0'
+    compileOnly 'jakarta.annotation:jakarta.annotation-api:2.1.1'
 }
-
+runIde {
+    jvmArgs '--illegal-access=permit'
+}
 // See https://github.com/JetBrains/gradle-intellij-plugin/
 intellij {
-    version = '2021.3'
+    version = '2021.3.1'
 }
 patchPluginXml {
     changeNotes = """
@@ -26,4 +36,8 @@ patchPluginXml {
 }
 test {
     useJUnitPlatform()
+}
+
+publishPlugin {
+    token intellijPublishToken
 }
